infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
   - hosts:
       - meb.moversapp.co
     secretName: meb-moversapp-co
  rules:
    - host: meb.moversapp.co
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/clients/?(.*)
            pathType: Prefix
            backend:
              serviceName: clients-srv
              servicePort: 3000
          - path: /api/notifications/?(.*)
            pathType: Prefix
            backend:
              serviceName: notifications-srv
              servicePort: 3000
          - path: /api/locations/?(.*)
            pathType: Prefix
            backend:
              serviceName: locations-srv
              servicePort: 3000
          - path: /api/resources/?(.*)
            pathType: Prefix
            backend:
              serviceName: resources-srv
              servicePort: 3000
---
# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: "workaround.moversapp.co"

  labels:
    helm.sh/chart: ingress-nginx-3.30.0
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.46.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
